Fix the bug that the corresponding components of autocomplete_fields are not fully displayed on small screens.

--- a/django/contrib/admin/static/admin/css/responsive.css
+++ b/django/contrib/admin/static/admin/css/responsive.css
@@ -665,6 +665,7 @@ input[type="submit"], button {
         width: 100%;
         display: flex;
         align-items: flex-start;
+        flex-wrap: wrap;
     }
 
     .related-widget-wrapper .selector {
